fix deprecated compilation warnings